web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-binding-element/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,24)
1|"use strict"; var { x: yield } = foo;
 |                      ^
